# pymdp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.rst  requirements.txt  setup.py
demo/: 1582403_sf_repaired.off  44498_sf_repaired.off  449906_sf_repaired.off  demo.py  file.off  kitten.off  test.py
demo/kitten/1582403_sf_repaired/: result-0.off  result-1.off  result-2.off  result.xml
demo/kitten/44498_sf_repaired/: result-0.off  result-1.off  result-2.off  result-3.off  result-4.off  result-5.off  result.xml
pretrained_model/experiments/base_model/: metrics_eval_best_weights.json  metrics_eval_last_weights.json
pretrained_model/experiments/base_model/best_weights/: after-epoch-73.index  checkpoint
pretrained_model/experiments/base_model/last_weights/: after-epoch-100.data-00000-of-00001  after-epoch-96.data-00000-of-00001  after-epoch-96.index  after-epoch-98.data-00000-of-00001  after-epoch-99.data-00000-of-00001
pretrained_model/experiments/base_model/train_summaries/: events.out.tfevents.1590751103.WILLIAMCWU-NB0
pymdp/: __init__.py  beam_guided.py  learning_based.py  trajectory.py  utility.py
pymdp/ranker/: rnn_ranker.py  uRanker.py  xgboost_ranker.py
pymdp/ranker/urank/: evaluate.py  evaluate_point.py  feature_norm_for_lambdarank.py  label_output  lambda_cv_correct.py  main.py  msltr2libsvm.py  prediction_output  prepare_data.py  process_results.py  run.bat  run.sh
pymdp/ranker/urank/experiments/base_model/: metrics_test_best_weights.json  params.json
pymdp/ranker/urank/experiments/base_model/best_weights/: after-epoch-73.data-00000-of-00001  learner.json
pymdp/ranker/urank/experiments/base_model/last_weights/: after-epoch-100.index  after-epoch-97.data-00000-of-00001  after-epoch-97.index  after-epoch-98.index  (+2 more)
pymdp/ranker/urank/lambdarank_setting/: lambda_cv.py  mslr-eval-score-mslr.pl  mslr-eval-ttest-mslr.pl  process_ndcg_results.py  template_predict.conf  template_train.conf
pymdp/ranker/urank/model/: evaluation.py  modeling.py  reader.py  training.py  utils.py
pymdp/ranker/urank/util/: loss_fns.py  masks.py  math_fns.py  sample.py  scores.py  search_metrics.py
src/: CustomisedPolyhedron.h  CustomisedSlicerDepracted.h  FillHole.cpp  FillHole.h  FillHoleCDT.cpp  FillHoleCDT.h  GeometryTools.cpp  GeometryTools.h  MeshCutEval.cpp  MeshCutEval.h  MeshSupEval.cpp  PlaneCut.cpp  PlaneCut.h  RoboFDM.cpp  RoboFDM.h  RoboFDMUtils.cpp
src/OCNN/: mesh.cpp  mesh.h  mesh_sampler.cpp  mesh_sampler.h  points.cpp  points_info.cpp  points_parser.cpp
(+1 files in other folders)
